<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pacman</string>
    <string name="app_id">926837906115</string>
    <string name="signing_in">Signing in with Google</string>
    <string name="sign_in">Sign in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="game_title">Mazza test game!</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait...</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_failure">Unable to sign in. Check your internet connection and try again later.</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
    <string name="test">test</string>
    <string name="first">first</string>
    <string name="last">last</string>
    <string name="multiplayer_warning">You must connect first!</string>
    <string name="multiplayer_ok">OK BOYYYYYYYYYYYZZZZZZ!</string>

</resources>
